# text_simplification_for_image_generation

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  setup.cfg
scripts/: 010525.delete.missing.file.in.the.generated.images.sh  010525.find.unfile.sh  0107.evaluate.inception.score.openai.sh  010725.remove.missing.number.of.caption.sh  010725.text.evaluate.clip.score.prompt1.sh  010725.text.evaluate.clip.score.prompt2.sh  010725.text.evaluate.clip.score.prompt3.sh  010725.text.evaluate.clip.score.prompt4.sh  010725.text.evaluate.clip.score.prompt5.sh  011325.re.evaluation.sh  011425.run.llama3.clip.score.sh  110724.make.dataset.from.wit.sh  110724.split.partial.data.from.raw.wit.sh  111224.add.summary.prompt.by.3.3.llama70b.sh  111224.add.summary.prompt.by.hf.sh  111224.add.summary.prompt.by.llama70b.sh  111224.add.summary.prompt.by.llama8b.sh  111224.add.summary.prompt.by.phi.sh  111224.add.summary.prompt.by.qwen72b.sh  111224.make.all.variation.model.input.sh  111324.add.summary.prompt.77tokens.by.3.3.llama70b.iterative.sh  111324.add.summary.prompt.77tokens.by.3.3.llama70b.sh  111324.add.summary.prompt.77tokens.by.llama70b.iterative.sh  111324.add.summary.prompt.77tokens.by.llama70b.sh  111324.add.summary.prompt.77tokens.by.llama8b.iterative.sh  111324.add.summary.prompt.77tokens.by.llama8b.sh  111324.add.summary.prompt.77tokens.by.phi.iterative.sh  111324.add.summary.prompt.77tokens.by.phi.sh  111324.add.summary.prompt.77tokens.by.qwen72b.iterative.sh  111324.add.summary.prompt.77tokens.by.qwen72b.sh  120824.make.batch.data.for.openai.sh  (+125 more)
(+49 files in other folders)
